Pull to repo with an exmaple of building a mesh
Other edits that are partially done to the paper

--- a/02-methods.Rmd
+++ b/02-methods.Rmd
@@ -15,9 +15,9 @@ A suite of 22 spatial environmental and oceanographic datasets were evaluated (T
 
 ## Statistical Analysis
 
-A Bayesian hierarchical methodology was implemented using the INLA approach available within the R Statistical Programming software R-INLA [@lindgrenBayesianSpatialModelling2015; @bakkaSpatialModellingRINLA2018; @rcoreteamLanguageEnvironmentStatistical2020]. In recent years, R-INLA has seen a rapid increase in use to model species distributions in both the terrestrial and marine realms [e.g. @cosandey-godinApplyingBayesianSpatiotemporal2015; @leachModellingInfluenceBiotic2016; @boudreauConnectivityPersistenceLoss2017]. This methodology solves stochastic partial differential equations on a spatial triangulated mesh; the mesh is typically based on the available data [@rueBayesianComputingINLA2016]. The mesh used in this study included `r mesh.gf$n` vertices and was extended beyond the boundaries of the data to avoid edge effects (Figure \@ref(fig:Mesh)). Default priors were used for the analysis, except for the range and standard deviation hyperparameters used to generate the random fields, which were Penalized Complexity (PC) priors [@zuurBeginnerGuideSpatial2017; @fuglstadConstructingPriorsThat2019]. The range PC prior had a median of 50 km with a probability of 0.05 that the range was smaller than 50 km. The standard deviation of the PC prior had a median of 0.5 with a probability of 0.05 that the marginal standard deviation was larger than 0.5.
+A Bayesian hierarchical methodology was implemented using the INLA approach available within the R Statistical Programming software R-INLA [@lindgrenBayesianSpatialModelling2015; @bakkaSpatialModellingRINLA2018; @rcoreteamLanguageEnvironmentStatistical2020]. In recent years, R-INLA has seen a rapid increase in use to model species distributions in both the terrestrial and marine realms [e.g. @cosandey-godinApplyingBayesianSpatiotemporal2015; @leachModellingInfluenceBiotic2016; @boudreauConnectivityPersistenceLoss2017]. This methodology solves SPDEs on a spatial triangulated mesh; the mesh is typically based on the available data [@rueBayesianComputingINLA2016]. The mesh used in this study included `r mesh.gf$n` vertices and was extended beyond the boundaries of the data to avoid edge effects (Figure \@ref(fig:Mesh)). Default priors were used for the analysis, except the range and standard deviation hyperparameters (Penalized Complexity (PC) priors) that were used to generate the random fields  [@zuurBeginnerGuideSpatial2017; @fuglstadConstructingPriorsThat2019]. The range PC prior had a median of 50 km with a probability of 0.05 that the range was smaller than 50 km. The standard deviation of the PC prior had a median of 0.5 with a probability of 0.05 that the marginal standard deviation was larger than 0.5.
 
-Survey data up to `r max(dat.final$year)` were used for model development (*Winter* survey from 1987-`r max(dat.final$year)`, *Spring* and *Fall* surveys from 1972-`r max(dat.final$year)`), data from `r max(dat.final$year+1)`-`r max(dat.final$year+3)` were used only as a testing dataset. For all analyses, the response variable was the probability of the survey detecting the stock of interest (Occurrence Probability, $OP_{it}$) and a *Bernoulli* GLM was utilized within R-INLA. Cells with an estimated OP $\geq$ `r hi.prob` were considered the *core area*. An interactive [dashboard](https://github.com/Dave-Keith/Paper_2_SDMs/tree/master/Dashboard) has been developed that can be used to explore the effect of defining different OPs as core area.
+Survey data up to `r max(dat.final$year)` were used for model development (*Winter* survey from 1987-`r max(dat.final$year)`, *Spring* and *Fall* surveys from 1972-`r max(dat.final$year)`), data from `r max(dat.final$year+1)`-`r max(dat.final$year+3)` were used only as a testing dataset. For all analyses, the response variable was the probability of the survey detecting the stock of interest (Occurrence Probability, $OP_{it}$, where *i* is the individual observation at time *t*) and a *Bernoulli* GLM was utilized within R-INLA. Cells with an estimated OP $\geq$ `r hi.prob` were considered the *core area*. An interactive [dashboard (https://github.com/Dave-Keith/Paper_2_SDMs/tree/master/Dashboard)](https://github.com/Dave-Keith/Paper_2_SDMs/tree/master/Dashboard) has been developed that can be used to explore the effect of defining different OPs as core area.
 
 $$ OP_{it} \sim Bernoulli(\pi_{it}) $$
 
@@ -37,9 +37,9 @@ Four spatial random field ($u_{it}$) models with differing temporal components w
 
 Models were tested using WAIC, CPO, and DIC; the results were similar for each of these diagnostics; only WAIC is discussed further. The model selection results are available in the supplement and the complete results can be found in the Model Output and Model Diagnostics sections of the interactive [dashboard](https://github.com/Dave-Keith/Paper_2_SDMs/tree/master/Dashboard).
 
-Stage 1 model selection for the different covariate models was undertaken using the static random field by adding individual covariates. For this first analysis, covariates were identified if WAIC scores were more than 10 units smaller than the intercept model (e.g. SST for Atlantic Cod in the *Winter*; Figure \@ref(fig:diag-1-fe)) or were found to be low relative to the suite of models tested in multiple seasons (e.g. Dep for Atlantic Cod in the *Spring* and *Fall*; Figure \@ref(fig:diag-1-fe)). For Atlantic Cod, this analysis identified depth (*Dep*) and the average sea surface temperature between 1997 and 2008 (*SST*) as having low WAIC scores in 2 of the 3 surveys [data obtained from @greenlawGeodatabaseHistoricalContemporary2010]. For Yellowtail Flounder, Dep was identified as an informative covariate in all 3 surveys. In addition, Sed, and the average chlorophyll concentration between 1997 and 2008 (*Chl*) were retained based on their low WAIC scores in the  *Fall* survey. Given the low number of informative covariates Dep, SST, and Chl were all retained for both species in Stage 2 of model selection. In Stage 2 of model selection, the variables were added pairwise (e.g. for Atlantic Cod, the models included SST + Dep, Dep + Chl, and SST + Chl) for both stocks and again compared using WAIC using the 10-year random fields. In Stage 3 of covariate model selection, models with 3 covariates were tested based on the Stage 2 results. For Atlantic Cod, a three term model that included additive terms for SST, Dep, and Chl was the most complex model tested. For Yellowtail Flounder, the most complex model included SST, Dep, and Sed. In Stage 3, additional covariates were retained if the WAIC for that model resulted in an improvement of the WAIC of more than 2, as compared to the lowest WAIC for the more parsimonious model.
+Stage 1 model selection for the different covariate models was undertaken using the static random field by adding individual covariates. For this first analysis, covariates were identified if WAIC scores were more than 10 units smaller than the intercept model (e.g. SST for Atlantic Cod in the *Winter*; Figure \@ref(fig:diag-1-fe)) or were found to be low relative to the suite of models tested in multiple seasons (e.g. Dep for Atlantic Cod in the *Spring* and *Fall*; Figure \@ref(fig:diag-1-fe)). For Atlantic Cod, this analysis identified depth (*Dep*) and the average sea surface temperature between 1997 and 2008 (*SST*) as having low WAIC scores in 2 of the 3 surveys [data obtained from @greenlawGeodatabaseHistoricalContemporary2010]. For Yellowtail Flounder, Dep was identified as an informative covariate in all 3 surveys. In addition, Sed, and the average chlorophyll concentration between 1997 and 2008 (*Chl*) were retained based on their low WAIC scores in the  *Fall* survey. Given the low number of informative covariates Dep, SST, and Chl were all retained for both species in Stage 2 of model selection. In Stage 2 of model selection, the variables were added pairwise (e.g. for Atlantic Cod, the models included SST + Dep, Dep + Chl, and SST + Chl) for both stocks and again compared using WAIC with the 10-year random fields. In Stage 3 of covariate model selection, models with 3 covariates were tested based on the Stage 2 results. For Atlantic Cod, a three term model that included additive terms for SST, Dep, and Chl was the most complex model tested. For Yellowtail Flounder, the most complex model included SST, Dep, and Sed. In Stage 3, additional covariates were retained if the WAIC for that model resulted in an improvement of the WAIC of more than 2, as compared to the lowest WAIC for the more parsimonious model.
 
-Model selection on the temporal random fields was done while holding the environmental covariate terms the same.  Initial model selection for the random fields (10 and 5-year fields) was done using the Dep + SST model for both species in all seasons given the general support for the Dep + SST model identified in Stage 2 of covariate model selection. For both species this indicated that the 10-year field was inferior to the more flexible 5-year random fields.  For Atlantic Cod, the 3 and 5-year random fields were compared using the Dep + SST (which was the covariate model with the lowest WAIC). For Yellowtail Flounder, the final step of the random field model selection used the Dep + SST + Sed model (which was the covariate model with the lowest WAIC) for the 3-year and 5-year random field comparison. The key model selection results are provided in the supplement and the full results can be found in the interactive [dashboard](https://github.com/Dave-Keith/Paper_2_SDMs/tree/master/Dashboard). For Atlantic Cod the *final model* chosen included additive Dep and SST covariates and used a random field which changed every 5 years. For Yellowtail Flounder, the final model chosen included additive Dep, SST, and Sed covariates, the *Winter* and *Spring* models used a 3-year random field, while the *Fall* model used a 5-year random field.
+Model selection on the temporal random fields was done while holding the environmental covariate terms the same.  Initial model selection for the random fields (10 and 5-year fields) was done using the Dep + SST model for both species in all seasons given the general support for the Dep + SST model identified in Stage 2 of covariate model selection. For both species this indicated that the 10-year field was inferior to the more flexible 5-year random fields.  For Atlantic Cod, the 3 and 5-year random fields were compared using the Dep + SST covariates (which was the covariate model with the lowest WAIC). For Yellowtail Flounder, the final step of the random field model selection used the Dep + SST + Sed model (which was the covariate model with the lowest WAIC) for the 3-year and 5-year random field comparison. The key model selection results are provided in the supplement and the full results can be found in the interactive [dashboard](https://github.com/Dave-Keith/Paper_2_SDMs/tree/master/Dashboard). For Atlantic Cod the *final model* chosen included additive Dep and SST covariates and used a random field which changed every 5 years. For Yellowtail Flounder, the final model chosen included additive Dep, SST, and Sed covariates, the *Winter* and *Spring* models used a 3-year random field, while the *Fall* model used a 5-year random field.
 
 ## Model Prediction 
 
@@ -70,4 +70,4 @@ To quantify the ability of these models to predict the location of the stocks in
 
 ## Model Validation
 
-Five fold cross validation was used to compare the out-of-sample predictive performance for a subset of the 5-year random field models: intercept only, SST (Atlantic Cod), Dep (Yellowtail Flounder), and Dep + SST. The Atlantic Cod model validation was performed using the *Winter* survey data, the Yellowtail Flounder validation used the *Spring* survey data. The data were randomly divided into 5 subsets and trained using 4 of the subsets; the 5th dataset was treated as a testing dataset to determine how well the model was able to predict out-of-sample data. Model performance was measured by comparing the model residuals from the training data to the prediction error from the testing data. The metrics used for this comparison were RMSE, MAE, and SD, given the similarity of the results only the RMSE is presented (full results are available in the interative [dashboard](https://github.com/Dave-Keith/Paper_2_SDMs/tree/master/Dashboard)). A subset of models were chosen because of the computational demands of this validation procedure. 
+Five fold cross validation was used to compare the out-of-sample predictive performance for a subset of the 5-year random field models: intercept only, SST (Atlantic Cod), Dep (Yellowtail Flounder), and Dep + SST. The Atlantic Cod model validation was performed using the *Winter* survey data, the Yellowtail Flounder validation used the *Spring* survey data. The data were randomly divided into 5 subsets and trained using 4 of the subsets; the 5^th^ dataset was treated as a testing dataset to determine how well the model was able to predict out-of-sample data. Model performance was measured by comparing the model residuals from the training data to the prediction error from the testing data. The metrics used for this comparison were RMSE, MAE, and SD. Given the similarity of the results only the RMSE is presented (full results are available in the interactive [dashboard](https://github.com/Dave-Keith/Paper_2_SDMs/tree/master/Dashboard)). A subset of models were chosen because of the computational demands of this validation procedure. 
