--- a/04-discussion.Rmd
+++ b/04-discussion.Rmd
@@ -1,6 +1,6 @@
 # DISCUSSION
 
-The SDMs developed here incorporated environmental, spatial, and multi-scale temporal information to partition dynamic changes which occur both inter and intra-annually from static environmental relationships. This framework provided a more complete understanding of the temporal shifts in the stocks distribution than simpler aggregation based indices that are often used in fisheries science [e.g. @reuchlin-hugenholtzPotentialSpatialDistribution2015; see Supplemental Figure \@ref(fig:gini-index) showing the Gini index timeseries for Yellowtail Flounder and Atlantic Cod on Georges Bank for each survey]. A general shift in the distributions of both stocks towards the east and north was identified.  For both stocks this shift was in large part due to the loss of core area in the southern and western portion of GB (primarily in U.S. waters). In addition, the analysis of surveys from different times of the year provided a snapshot of the seasonal changes in the distributions of the stocks; the Yellowtail Flounder distribution was relatively stable throughout the year, while Atlantic Cod moved towards the northeastern slope of GB in the *Fall*. Finally, the models were able to predict the location of Atlantic Cod and Yellowtail Flounder, without including envioronmental covariates, up to 3 years in the future with only a modest loss of predictive ability. The SDMs developed here can be used to identify regions of consistently high and low probability of occurrence, quantify changes in the size of a core area over time and between seasons (surveys), quantify how rapidly distributional shifts occur, and provide short term forecasts of the spatial distributions in future years.
+The SDMs developed here incorporated environmental, spatial, and multi-scale temporal information to partition dynamic changes which occur both inter and intra-annually from static environmental relationships. This framework provided a more complete understanding of the temporal shifts in the stocks' distributions than simpler aggregation based indices that are often used in fisheries science [e.g. @reuchlin-hugenholtzPotentialSpatialDistribution2015; see Supplemental Figure \@ref(fig:gini-index) showing the Gini index timeseries for Yellowtail Flounder and Atlantic Cod on Georges Bank for each survey]. A general shift in the distributions of both stocks towards the east and north was identified.  For both stocks, this shift was in large part due to the loss of core area in the southern and western portion of GB (primarily in U.S. waters). In addition, the analysis of surveys from different times of the year provided a snapshot of the seasonal changes in the distributions of the stocks; the Yellowtail Flounder distribution was relatively stable throughout the year, while Atlantic Cod moved towards the northeastern slope of GB in the *Fall*. Finally, the models were able to predict the location of Atlantic Cod and Yellowtail Flounder, without including environmental covariates, up to 3 years in the future with only a modest loss of predictive ability. The SDMs developed here can be used to identify regions of consistently high and low probability of occurrence, quantify changes in the size of a core area over time and between seasons (surveys), quantify how rapidly distributional shifts occur, and provide short term forecasts of the spatial distributions in future years.
 
 The core area for Atlantic Cod collapsed rapidly in the early 1990s in unison with the collapse of Atlantic Cod (and other groundfish) stocks throughout the Northwest Atlantic [@bundySealsCodForage2009]. Since this collapse, the size of the core area has remained relatively consistent but there has been a shift to the northeast, which was more pronounced in the *Fall*. The loss of core area from the warmer southern and western reaches of the bank was the primary reason for the shift in the distribution of Atlantic Cod into Canadian waters. In more recent years, the *Fall* distribution of Atlantic Cod was likely located on the northeastern slope of the bank and outside of the core survey domains.
 
@@ -16,19 +16,19 @@ Yellowtail Flounder were more likely to be found on sandy bottom types, in regio
 
 ### Environmental Covariates and Random Fields
 
-Few of the static environmental covariates examined were related to the distribution of either stock. Only the static SST layer, depth, and sediment type (Yellowtail Flounder only) had any consistent relationship to the likelihood of encountering either stock throughout the duration of this study. The influence of the average SST was somewhat surprising given this layer was derived from monthly SST composites from the Advanced Very High Resolution Radiometer (AVHRR) satellite from 1997 to 2008 [@greenlawGeodatabaseHistoricalContemporary2010] and thus represents an aggregate, static layer from only a subset of the time period covered by the groundfish survey data. However, the importance of this SST layer may be due to its ability to capture general widespread oceanographic features across the bank domain. Further, the observed variability of the effect between seasons was likely a reflection of the connection between surface waters and the benthos given that the degree of vertical mixing and stratification varies with season and spatially across the bank [@kavanaughThirtyThreeYearsOcean2017]. It is acknowledged that the interpretation of the static SST layer used in these analyses as a thermal effect is likely somewhat unrealistic as it assumes that the relative temperature patterns and the stocks response to these patterns have remained static across more than four decades. To understand how the thermal environment has influenced the stocks distributions on GB, the development of more advanced models that use either dynamic SST or modelled bottom temperature layers would be beneficial [@greenanClimateChangeVulnerability2019; @pershingSlowAdaptationFace2015]. Further, changes in a stocks distribution cannot be inferred from static environmental layers like those used in this analysis, the random fields were the means by which the changes in distribution could be tracked.
+Few of the static environmental covariates examined were related to the distribution of either stock. Only the static SST layer, depth, and sediment type (Yellowtail Flounder only) had any consistent relationship to the likelihood of encountering either stock throughout the duration of this study. The influence of the average SST was somewhat surprising given this layer was derived from monthly SST composites from the Advanced Very High Resolution Radiometer (AVHRR) satellite from 1997 to 2008 [@greenlawGeodatabaseHistoricalContemporary2010] and thus represents an aggregate, static layer from only a subset of the time period covered by the groundfish survey data. However, the importance of this SST layer may be due to its ability to capture general widespread oceanographic features across the bank domain. Further, the observed variability of the effect between seasons was likely a reflection of the connection between surface waters and the benthos given that the degree of vertical mixing and stratification varies with season and spatially across the bank [@kavanaughThirtyThreeYearsOcean2017]. It is acknowledged that the interpretation of the static SST layer used in these analyses as a thermal effect is likely somewhat unrealistic as it assumes that the relative temperature patterns and response of the stocks to these patterns have remained static across more than four decades. To understand how the thermal environment has influenced the stocks' distributions on GB, the development of more advanced models that use either dynamic SST or modelled bottom temperature layers would be beneficial [@greenanClimateChangeVulnerability2019; @pershingSlowAdaptationFace2015]. Further, changes in the distribution of a stock cannot be inferred from static environmental layers like those used in this analysis, the random fields were the means by which the changes in distribution could be tracked.
 
-From a predictive standpoint, the random fields were often able to predict the OP without a substantial loss of predictive ability when compared to the more complex models including the static environmental data (e.g. Figure \@ref(fig:folds)). This occurred because the random fields were flexible enough to capture the variability inherent in the data in each era, while the environmental covariate relationships were constrained to be invariant throughout the entire time series. Recent research suggests that using a static random field in conjunction with a spatio-temporal random field may provide less biased and more accurate estimates than models that rely solely on environmental covariates [@yinReviewSpatiotemporalModel]. The results of the current study also suggest that when environmental data aren't available or are prohibitively expensive to collect, these spatial models on their own can provide insight into the drivers of a stocks distribution. The information from these spatio-temporal models could then be used as a first step to better understand the patterns and processes driving change in the stocks distribution and subsequently help with the design of more efficient data collection programs.
+From a predictive standpoint, the random fields were often able to predict the OP without a substantial loss of predictive ability when compared to the more complex models including the static environmental data (e.g. Figure \@ref(fig:folds)). This occurred because the random fields were flexible enough to capture the variability inherent in the data in each era, while the environmental covariate relationships were constrained to be invariant throughout the entire time series. Recent research suggests that using a static random field in conjunction with a spatio-temporal random field may provide less biased and more accurate estimates than models that rely solely on environmental covariates [@yinReviewSpatiotemporalModel]. The results of the current study also suggest that when environmental data aren't available or are prohibitively expensive to collect, these spatial models on their own can provide insight into the drivers of a stock's distribution. The information from these spatio-temporal models could then be used as a first step to better understand the patterns and processes driving change in the stock's distribution and subsequently help with the design of more efficient data collection programs.
 
-Finally, it should be noted that the observed shifts in the distributions could be due to environmental change and/or direct anthropogenic factors [e.g. fishing; @boudreauConnectivityPersistenceLoss2017]. The shifts in the distributions in the 1970s and 1980s may indeed have been related to either fishing or environmental factors given the relatively high fishing effort during this period [@andersonHistoryFisheriesManagement1997; @andrushchenkoAssessmentEasternGeorges2018; @legaultStockAssessmentGeorges2018]. However, several lines of evidence suggest that fisheries are not inhibiting these stocks from re-establishing themselves in the southern or western portions of GB in more recent years. The lack of a large directed fishery for Atlantic Cod on GB since the early 1990s, along with the addition of two large closures in U.S. waters [@murawskiLargescaleClosedAreas2000] have not resulted in a shift in the distribution of this stock back into southern or western portions of the bank. In addition, in the early 2000s there was a large increase in the biomass of Yellowtail Flounder, which lead to a short-lived directed fishery, that was followed by a rapid decline in the biomass of this stock [@legaultStockAssessmentGeorges2018]. During this ephemeral Yellowtail Flounder recovery, the size of the core area increased substantially on GB, but it remained centred on the ICJ line; there was no widespread re-establishment of this stock throughout southern and western regions where it was observed frequently in the 1970s. Finally, in recent years, bycatch of these two stocks in two lucrative scallop fisheries on GB has been in decline [@okeefeEvaluatingEffectivenessTime2014; @keithEvaluatingSocioeconomicConservation2020] but this has not resulted in an expansion of the distribution of either stock. Given these patterns along with the regional trends observed for other stocks of these species [@bundySealsCodForage2009; @nfsc54thNortheastRegional2012; @noaaNOAAYellowtailFlounder2020; @pershingSlowAdaptationFace2015], it seems likely the distributions of both stocks on GB in recent years has been predominately influenced by environmental conditions.
+Finally, it should be noted that the observed shifts in the distributions could be due to environmental change and/or direct anthropogenic factors [e.g. fishing; @boudreauConnectivityPersistenceLoss2017]. The shifts in the distributions in the 1970s and 1980s may indeed have been related to either fishing or environmental factors given the relatively high fishing effort during this period [@andersonHistoryFisheriesManagement1997; @andrushchenkoAssessmentEasternGeorges2018; @legaultStockAssessmentGeorges2018]. However, several lines of evidence suggest that fisheries are not inhibiting these stocks from re-establishing themselves in the southern or western portions of GB in more recent years. The lack of a large directed fishery for Atlantic Cod on GB since the early 1990s, along with the addition of two large closures in U.S. waters [@murawskiLargescaleClosedAreas2000] have not resulted in a shift in the distribution of this stock back into southern or western portions of the bank. In addition, in the early 2000s there was a large increase in the biomass of Yellowtail Flounder, which lead to a short-lived directed fishery, that was followed by a rapid decline in the biomass of this stock [@legaultStockAssessmentGeorges2018]. During this ephemeral Yellowtail Flounder recovery, the size of the core area increased substantially on GB, but it remained centred on the ICJ line; there was no widespread re-establishment of this stock throughout southern and western regions where it was observed frequently in the 1970s. Finally, in recent years, bycatch of these two stocks in two lucrative scallop fisheries on GB has been in decline [@okeefeEvaluatingEffectivenessTime2014; @keithEvaluatingSocioeconomicConservation2020], but this has not resulted in an expansion of the distribution of either stock. Given these patterns along with the regional trends observed for other stocks of these species [@bundySealsCodForage2009; @nfsc54thNortheastRegional2012; @noaaNOAAYellowtailFlounder2020; @pershingSlowAdaptationFace2015], it seems likely the distributions of both stocks on GB in recent years were predominately influenced by environmental conditions.
 
 ### Conclusion
 
-Temporally variable SDMs provide insight into how the distributions of Yellowtail Flounder and Atlantic Cod have changed on GB. The only static environmental data which had a significant effect on the stocks distributions were the average SST (1997-2008), depth, and bottom type (Yellowtail Flounder only). The inter-annual shifts in the distributions indicate the increasing importance of Canadian waters for both stocks; these shifts are likely due to the long-term environmental shifts observed in the region. Given the habitat constraints faced by both stocks, continued directed environmental change will likely put both stocks at increased risk of extirpation in the U.S. portion of Georges Bank and, eventually, all of GB irrespective of any fisheries management action. The shifts in species distribution identified by in these spatio-temporal models can be used to improve science advice and lead to more informed fisheries management decisions.
+Temporally variable SDMs provide insight into how the distributions of Yellowtail Flounder and Atlantic Cod have changed on GB. The only static environmental data which had a significant effect on the stocks distributions were the average SST (1997-2008), depth, and bottom type (Yellowtail Flounder only). The inter-annual shifts in the distributions indicate the increasing importance of Canadian waters for both stocks; these shifts are likely due to the long-term environmental shifts observed in the region. Given the habitat constraints faced by both stocks, further shifts in environmental conditions will likely put both stocks at increased risk of extirpation in the U.S. portion of Georges Bank and, eventually, all of GB irrespective of any fisheries management action. The shifts in species distribution identified in these spatio-temporal models can be used to improve science advice and lead to more informed fisheries management decisions.
 
 # ACKNOWLEDGEMENTS
 
-Thanks to Christine Ward-Paige, Yanjun Wang, Dheeraj Busawon, Monica Finley, Phil Politis, and Nancy Shackell for help with data, questions, and the development and exploration of various parts of this project. Thanks to Trish Pearo Drew, Jamie Raper, and Brittany Wilson for general support and we thank Dan Ricard and Joanna Mills Flemming for their feedback on a previous version of this manuscript. This project was made possible by funding from Fisheries and Oceans Canada (DFO) Strategic Program for Ecosystem-based Research and Advice (SPERA).
+Thanks to Christine Ward-Paige, Yanjun Wang, Dheeraj Busawon, Monica Finley, Phil Politis, and Nancy Shackell for help with data, questions, and the development and exploration of various parts of this project. Thanks to Tricia Pearo Drew, Jamie Raper, and Brittany Wilson for general support and we thank Dan Ricard and Joanna Mills Flemming for their feedback on a previous version of this manuscript. This project was made possible by funding from Fisheries and Oceans Canada (DFO) Strategic Program for Ecosystem-based Research and Advice (SPERA).
 
 <!--- Old stuff --->
 
