--- a/07-figures.Rmd
+++ b/07-figures.Rmd
@@ -4,7 +4,7 @@
 
 <br>
 
-```{r Overview, echo=FALSE,out.width="100%",dpi=200,fig.cap = "Georges Bank (GB) study area.  Points represent the sample locations for each of the three surveys and the orange outline represets the core region of GB included in these analyses (42,000 km²).  The red line delineates the Canadian exclusive economic zone (EEZ)."}
+```{r Overview, echo=FALSE,out.width="100%",dpi=200,fig.cap = "Georges Bank (GB) study area.  Points represent the sample locations for each of the three surveys and the orange outline represents the core region of GB included in these analyses (42,000 km²).  The red line delineates the Canadian exclusive economic zone (EEZ)."}
 # Note that out.width and out.height and dpi don't do anything for word document output in the chunck control above, they wil impact html and pdf output
 knitr::include_graphics(over.plt)
 ```
@@ -45,7 +45,7 @@ knitr::include_graphics(area.can.vs.us.plt)
 
 <!-- Make sure you have a couple lines of blank space after the figure calls or the captions don't print because that's what Rmarkdown does... --->
 \newpage
-```{r cod-fe, echo=FALSE,out.width="100%",dpi=200,fig.cap = "Fixed effects for Atlantic Cod for each season, top row is the Dep covariate effect, bottom row is the SST effect. Results transformed to the probability scale and the blue shaded region represents the 95\\% credible interval."}
+```{r cod-fe, echo=FALSE,out.width="100%",dpi=200,fig.cap = "Environmental covariate effects for Atlantic Cod for each season, top row is the Dep covariate effect, bottom row is the SST effect. Results have been transformed to the probability scale and the blue shaded region represents the 95\\% credible interval."}
 # Note that out.width and out.height and dpi don't do anything for word document output in the chunck control above, they wil impact html and pdf output
 knitr::include_graphics(cod.fe.plt)
 ```
@@ -53,7 +53,7 @@ knitr::include_graphics(cod.fe.plt)
 
 <!-- Make sure you have a couple lines of blank space after the figure calls or the captions don't print because that's what Rmarkdown does... --->
 \newpage
-```{r yt-fe, echo=FALSE,out.width="100%",dpi=200,fig.cap = "Fixed effects for Yellowtail Flounder for each season, the top row is the Dep covariate effect, middle row is the SST effect, and the bottom row is the Sed effect. Results transformed to the probability scale, and the blue shaded region and the error bars represent the 95\\% credible intervals. The Winter and Spring results use a 3 year random field while the Fall results are for the 5 year random field model."}
+```{r yt-fe, echo=FALSE,out.width="100%",dpi=200,fig.cap = "Environmental covariate effects for Yellowtail Flounder for each season, the top row is the Dep covariate effect, middle row is the SST effect, and the bottom row is the Sed effect. Results have been transformed to the probability scale, and the blue shaded region and the error bars represent the 95\\% credible intervals. The Winter and Spring results use a 3 year random field while the Fall results are for the 5 year random field model."}
 # Note that out.width and out.height and dpi don't do anything for word document output in the chunck control above, they wil impact html and pdf output
 knitr::include_graphics(yt.fe.plt)
 ```
@@ -78,7 +78,7 @@ knitr::include_graphics(sd.field.est.plt)
 
 <!-- Make sure you have a couple lines of blank space after the figure calls or the captions don't print because that's what Rmarkdown does... --->
 \newpage
-```{r folds, echo=FALSE,out.width="100%",dpi=200,fig.cap = "Results of 5 fold cross validation analyses. Top panels represents the mean error for each of the three covariate models tested for Atlantic Cod (using Winter data) and Yellowtail Flounder (using Spring data). Blue points represent the prediction error from the testing dataset, while the black points are the residuals from the training dataset. The bottom panels are the Root Mean Squared Error (RMSE) for these models.  The red dashed line represents the RMSE for randomly generated data and represents the RMSE for a model with no predictive ability. All models use the 5 year random field due to computational constraints."}
+```{r folds, echo=FALSE,out.width="100%",dpi=200,fig.cap = "Results of five fold cross validation analyses. Top panels represents the mean error for each of the three covariate models tested for Atlantic Cod (using Winter data) and Yellowtail Flounder (using Spring data). Blue points represent the prediction error from the testing dataset, while the black points are the residuals from the training dataset. The bottom panels are the RMSE for these models.  The red dashed line represents the RMSE for randomly generated data and represents the RMSE for a model with no predictive ability. All models use the 5 year random field due to computational constraints."}
 # Note that out.width and out.height and dpi don't do anything for word document output in the chunck control above, they wil impact html and pdf output
 knitr::include_graphics(folds.plt)
 ```
@@ -86,7 +86,7 @@ knitr::include_graphics(folds.plt)
 
 <!-- Make sure you have a couple lines of blank space after the figure calls or the captions don't print because that's what Rmarkdown does... --->
 \newpage
-```{r pred-17-19, echo=FALSE,out.width="100%",dpi=200,fig.cap = "The residual Root Mean Squared Error (RMSE) for the model is shown in black, while the blue lines represent the prediction RMSE for data in years 2017, 2018, and 2019. The models compared were a model with no covariates (intercept + random field) represented by the dashed line and a model which includes the additive SST and Depth covariates along with the random field represented by the solid line. Atlantic Cod results are in the top row and use a 5 year random field. Yellowtail Flounder results are in the bottom row and use a 3 year random field for the Winter and Spring and the 5 year random field for the Fall. The red dot-dash line represents the RMSE for randomly generated data and represents the RMSE for a model with no predictive ability."}
+```{r pred-17-19, echo=FALSE,out.width="100%",dpi=200,fig.cap = "The residual RMSE for the model is shown in black, while the blue lines represent the prediction RMSE for data in years 2017, 2018, and 2019. The models compared were a model with no covariates (intercept + random field) represented by the dashed line and a model which includes the additive SST and Dep covariates along with the random field represented by the solid line. Atlantic Cod results are in the top row and use a 5 year random field. Yellowtail Flounder results are in the bottom row and use a 3 year random field for the Winter and Spring and the 5 year random field for the Fall. The red dot-dash line represents the RMSE for randomly generated data and represents the RMSE for a model with no predictive ability."}
 # Note that out.width and out.height and dpi don't do anything for word document output in the chunck control above, they wil impact html and pdf output
 knitr::include_graphics(pred.17.19.plt)
 ```
